# sdi.coach

./: .env.example  .gitignore  AGENT_STRATEGY.md  CLAUDE.md  E2E_SCENARIO.md  LICENSE  PLAN.md  PRD.md  Package.swift  README.md  TODO.md
.claude/agents/: code-reviewer.md  implementer.md  refactorer.md  test-architect.md
Sources/SDICoach/: SDICoach.swift
Sources/SDICoach/Audio/: AudioTypes.swift  MicrophoneCapture.swift  MicrophoneCaptureProtocol.swift  SampleRateConverter.swift
Sources/SDICoach/Command/: Command.swift  CommandParser.swift
Sources/SDICoach/IPC/: IPCClient.swift  IPCProtocol.swift
Sources/SDICoach/Services/: InputHandler.swift  InterviewService.swift  TTSEngine.swift  TerminalRenderer.swift
Tests/SDICoachTests/: IPCClientTests.swift  IPCProtocolBase64Tests.swift  IPCProtocolTests.swift  SDICoachTests.swift  TTSEngineTests.swift
backend/: TTS_PIPELINE.md  __init__.py  main.py  pyproject.toml
backend/agents/: __init__.py  feedback.py  interviewer.py  service.py
backend/ipc/: __init__.py  protocol.py  server.py
backend/tests/: __init__.py  test_e2e_interview.py  test_ipc_server.py  test_protocol.py  test_protocol_base64.py
backend/tests/agents/: __init__.py  test_feedback.py  test_interviewer.py  test_service.py
backend/tests/transcription/: __init__.py  test_engine.py  test_service.py
backend/tests/tts/: __init__.py  test_engine.py  test_service.py
backend/transcription/: __init__.py  engine.py  service.py
backend/tts/: __init__.py  engine.py  pipeline.py  sentence_splitter.py  service.py
scripts/: sdi-coach
(+25 files in other folders)
