[project]
name = "sdi-coach-backend"
version = "0.1.0"
description = "SDI Interview Coach - Python Backend (MLX Whisper, TTS, AI Agents)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SDI Coach Team" }
]
keywords = ["sdi", "interview", "coach", "whisper", "tts", "ai"]

dependencies = [
    "mlx-whisper>=0.4.0",
    "mlx-audio[tts]",
    "sounddevice>=0.4.0",
    "strands-agents>=0.1.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
